@@ -32,9 +32,8 @@ namespace LHAPDF {
 
 
   double PDFSet::errorConfLevel() const {
-    /// @todo Return -1 or similar invalid value if errorType is replica: requires changes in uncertainty code "alternative mode" below
-    //return get_entry_as<double>("ErrorConfLevel", (errorType() != "replica") ? 100*boost::math::erf(1/sqrt(2)) : -1);
-    return get_entry_as<double>("ErrorConfLevel", 100*boost::math::erf(1/sqrt(2)));
+    // Return -1 or similar invalid value if errorType is replica: requires changes in uncertainty code "alternative mode" below
+    return get_entry_as<double>("ErrorConfLevel", (errorType() != "replica") ? 100*boost::math::erf(1/sqrt(2)) : -1);
   }
 
 
@@ -46,8 +45,9 @@ namespace LHAPDF {
       throw UserError("Error in LHAPDF::PDFSet::uncertainty. Input vector must contain values for all PDF members.");
     const size_t nmem = size()-1;
 
-    // Get set- and requested conf levels and check sanity (req CL = set CL if cl < 0).
-    const double setCL = errorConfLevel() / 100.0; // convert from percentage
+    // Get set- and requested conf levels (converted from %) and check sanity (req CL = set CL if cl < 0).
+    // For replica sets, we internally use a nominal setCL corresponding to 1-sigma, since errorConfLevel() == -1
+    const double setCL = (errorType() != "replicas") ? errorConfLevel() / 100.0 : boost::math::erf(1/sqrt(2));
     const double reqCL = (cl >= 0) ? cl / 100.0 : setCL; // convert from percentage
     if (!in_range(reqCL, 0, 1) || !in_range(setCL, 0, 1))
       throw UserError("Error in LHAPDF::PDFSet::uncertainty. Requested or PDF set confidence level outside [0,1] range.");
